--- a/video.css
+++ b/video.css
@@ -1,4 +1,5 @@
 body {
+    background-color: whitesmoke;
     text-align: center;
 }
 
@@ -6,7 +7,7 @@ body {
     margin: auto;
     width: 60%;
     height: 85%;
-    background-color: gainsboro;
+    background-color: black;
 }
 
 video {
